     org.kde.VisualNotifications DBus service
 * Miscellaneous and bugfixes:
   * Fixed language switch not affecting unit descriptions (bug #13827)
   * Fixed teleporting to impassable terrain (bug #13795)
   * Fixed an issue where teleporting could leave a unit halo
   * Fixed [set_variable]'s rand and random when operating on 0..0 (return 0)

Version 1.7.1:
 * AI:
   * Reworked AI code to allow easier creation of AI components.
   * New AI: Composite AI
   * (Optional) new AI configuration syntax.
   * Basic reimplementation of an old C++ AI as a 'candidate action'-based composite AI
   * Autodiscovery of available AI configurations from data/ai/ais.
   * (In debug mode) Autodiscovery of available AI configurations from data/ai/dev
 * Campaigns
   * Delfador's Memoirs: new portrait for Lionel.
    * The Hammer of Thursagan: new portraits for Angarthing, Ratheln.
 * Graphics
   * New portrait for Knight, Ghost.
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Czech, Finnish, French,
     German, Greek, Hungarian, Icelandic, Lithuanian, Polish, Russian,
     Serbian, Turkish
 * User interface:
   * Removed the old obsolete layout algorithm in the new widgets
   * Added unit tests for the new widgets
   * Improved the layout algorithm not to show scrollbars when they make the
     situation worse
   * Add a new transient message dialog
   * Add a new multi page widget
   * Increase the lineheight in the new dialogs
   * Add a blur precommit function to the canvas
   * Improved the redraw algoritm and added more asserts
   * Objectives now use pango markup
   * Replace the campaign dialog with a new gui one (debian bug #497655)
   * Removed the hidden option to disable the tips of the day
   * A click on a slider now properly sets the position
   * WML generated messages, labels and sounds are skiped during replay (bug #13519)
   * Added support for desktop notifications (GTK/libnotify only for now, patch #1179)